# w3s-cli

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml
src/: args.rs  main.rs
