[package]
name = "w3s"
version = "0.1.4"
description = "A easy tool to upload file or directory to web3.storage with optional encryption and compression"
authors = ["qdwang"]
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
w3s = { version = "0.2", features = ["all"] }
anyhow = "1"
tokio = { version = "1", features = ["macros"] }
dirs = "4"
crossterm = "0.25.0"
rpassword = "7"

[profile.release]
codegen-units = 1
lto = "fat"
